# Cluster-Algorithm-Comparison

./: README.md  pyproject.toml
ClusterAlgorithmComparison/: package-lock.json
ClusterAlgorithmComparison/backend/: comparison.py  data_preprocessing.py  gmm_clustering.py  kmeans_clustering.py  main.py  sp500_gmm_clusters.csv  sp500_kmeans_variances.csv  sp500_pca_reduced_gmm.csv  sp500_pca_reduced_kmeans.csv  sp500_tsne_reduced_gmm.csv  sp500_tsne_reduced_kmeans.csv
ClusterAlgorithmComparison/front-end/: package.json
ClusterAlgorithmComparison/front-end/src/: App.tsx
ClusterAlgorithmComparison/frontend/: package-lock.json  package.json  tsconfig.json
ClusterAlgorithmComparison/frontend/src/: App.tsx
ClusterAlgorithmComparison/frontend/src/assets/: sampledata.csv  sampledata2.csv
ClusterAlgorithmComparison/frontend/src/components/: Analysis.css  Analysis.tsx  Footer.css  Footer.tsx  Graph.css  Graph.tsx  Header.css  Header.tsx  Home.css  Home.tsx
clustering_results/: gmm_clusters.csv  kmeans_clusters.csv
