[tool.poetry]
name = "cluster-algorithm-comparison"
version = "0.1.0"
description = "Clustering algorithms comparison for financial market regimes"
authors = ["patrickbott <gorays999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
flask = "^3.1.0"
yfinance = "^0.2.50"
flask-cors = "^5.0.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
